# game-of-life

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: bevy_renderer.rs  game.rs  main.rs  terminal_renderer.rs
