[package]
name = "game-of-life"
version = "0.3.1"
edition = "2024"
authors = ["Peilin Fan <peilin.fan@foxmail.com>"]
license = "MIT"
repository = "https://github.com/fansion314/game-of-life"

[dependencies]
rand = "0.9"
rayon = "1.11"
image = { version = "0.25", optional = true }
viuer = { version = "0.9", optional = true }
crossterm = { version = "0.29", optional = true }
bevy = "0.16"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"

[features]
default = []
terminal = ["dep:viuer", "dep:crossterm", "dep:image"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false
